fixed letter spacing and modal text transformatino to our styles

--- a/birl-button.css
+++ b/birl-button.css
@@ -277,6 +277,7 @@
 .birl-product-cta-text p {
   margin: 0;
   text-transform: none !important;
+  letter-spacing: 0 !important;
 }
 
 .birl-product-cta-text button {
@@ -725,6 +726,7 @@
   font-weight: 400;
   color: #4a4a4a;
   width: 80%;
+  text-transform: none !important;
 }
 
 .birlWelcome-img1{
